# ChangeLog for dev-perl/SNMP_Session
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/SNMP_Session/ChangeLog,v 1.29 2013/08/26 15:29:57 idella4 Exp $

*SNMP_Session-1.13-r1 (26 Aug 2013)

  26 Aug 2013; Ian Delaney <idella4@gentoo.org> +SNMP_Session-1.13-r1.ebuild,
  SNMP_Session-1.13.ebuild:
  revbump -> EAPI 5

  01 Mar 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Add missing cpan remote-id tags in metadata.xml (#406287)

  30 Mar 2011; Michael Weber <xmw@gentoo.org> SNMP_Session-1.13.ebuild:
  added ~arm (bug 302981)

  28 Dec 2010; Brent Baude <ranger@gentoo.org> SNMP_Session-1.13.ebuild:
  Marking SNMP_Session-1.13 ppc64 for bug 342475

  26 Nov 2010; Jeroen Roovers <jer@gentoo.org> SNMP_Session-1.13.ebuild:
  Stable for HPPA (bug #342475).

  20 Oct 2010; Torsten Veller <tove@gentoo.org>
  -SNMP_Session-0.92-r1.ebuild, -SNMP_Session-1.12.ebuild:
  Cleanup

  18 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  SNMP_Session-1.13.ebuild:
  Keyword ~ppc64 wrt #321937.

  27 Jun 2010; <nixnut@gentoo.org> SNMP_Session-1.13.ebuild:
  ppc stable #323529

  14 May 2010; Jeroen Roovers <jer@gentoo.org> SNMP_Session-1.13.ebuild:
  Marked ~hppa (bug #311941).

  08 May 2010; Raúl Porcel <armin76@gentoo.org> SNMP_Session-1.13.ebuild:
  alpha/ia64/sparc stable wrt #314467

  17 Apr 2010; Torsten Veller <tove@gentoo.org> SNMP_Session-1.13.ebuild:
  Stable on amd64, x86 (#314467)

  18 Mar 2010; Jeremy Olexa <darkside@gentoo.org> SNMP_Session-1.13.ebuild:
  add ~x86-solaris ~sparc-solaris kw, as tested on bug 308683

*SNMP_Session-1.13 (08 Jan 2010)

  08 Jan 2010; Patrick Lauer <patrick@gentoo.org> +SNMP_Session-1.13.ebuild:
  Bump for #281501, changed homepage and src_uri

*SNMP_Session-1.12 (30 Jan 2009)

  30 Jan 2009; Torsten Veller <tove@gentoo.org> metadata.xml,
  +SNMP_Session-1.12.ebuild:
  Version bump. Fixes #256847.

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>