@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/SNMP_Session
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/SNMP_Session/ChangeLog,v 1.29 2013/08/26 15:29:57 idella4 Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/SNMP_Session/ChangeLog,v 1.30 2014/01/01 16:07:15 jer Exp $
+
+  01 Jan 2014; Jeroen Roovers <jer@gentoo.org> SNMP_Session-1.13-r1.ebuild:
+  Stable for HPPA (bug #495462).
 
 *SNMP_Session-1.13-r1 (26 Aug 2013)
 
